--- a/less/custom.less
+++ b/less/custom.less
@@ -29,6 +29,7 @@ header {
   min-height: 100%;
   height: auto !important;
   height: 100%;
+  opacity:0;
   margin: 0px auto -100px;
   padding: 30px 30px 0 30px;
 }
