--- a/less/loadingAnimation.less
+++ b/less/loadingAnimation.less
@@ -5,8 +5,15 @@
 	-o-transition:opacity 500ms;
 	transition:opacity 500ms;
 }
+
+.fadeIn{
+	opacity:1 !important;
+	-webkit-transition:opacity 700ms;
+	-moz-transition:opacity 700ms;
+	-o-transition:opacity 700ms;
+	transition:opacity 700ms;
+}
 .loadingPercentage_wrap{
-	background-color: white;
 	margin-top:80px;
 	width:70px;
 	border-radius: 5px;
